<resources>
    <string name="app_name">YA</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="register">회원가입</string>
    <string name="re_password">비밀번호 재입력</string>
    <string name="email_certification">이메일 인증</string>
    <string name="set_profile">프로필 설정</string>
    <string name="set_profile_detail">프로필과 회사 이름, 사업자 등록 번호를 입력해주세요.</string>
    <string name="select_interest">관심 분야 선택</string>
    <string name="select_interest_detail">관심있는 분야를 선택해주세요.</string>
    <string name="modifier_profile">프로필 수정</string>
    <string name="favorite_company">관심있는 회사</string>
    <string name="set_favorite_category">관심분야 설정</string>
    <string name="mypage">마이페이지</string>
    <string name="schedule">일정</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="place">장소</string>
    <string name="company">기업</string>
    <string name="modifier">수정하기</string>
    <string name="email">이메일</string>
    <string name="verification">인증</string>
    <string name="new_company">신규 가입 회사</string>
</resources>