<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22.5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/YA.Pretendard.Bold.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34.5dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilId"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister">

        <EditText
            android:id="@+id/etId"
            style="@style/YA.Pretendard.Regular.14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/id"
            android:inputType="text"
            android:paddingStart="6dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/tilId"
        app:layout_constraintStart_toStartOf="@+id/tilId"
        app:layout_constraintTop_toBottomOf="@id/tilId"
        app:passwordToggleDrawable="@drawable/password_drawable_checked"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etPassword"
            style="@style/YA.Pretendard.Regular.14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="6dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRePassword"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:passwordToggleDrawable="@drawable/password_drawable_checked"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etRePassword"
            style="@style/YA.Pretendard.Regular.14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:paddingStart="6dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivSmallCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="67dp"
        android:src="@drawable/small_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivBigCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/big_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.yongjincompany.ya.customview.CustomMainButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        app:layout_constraintEnd_toEndOf="@+id/tilRePassword"
        app:layout_constraintStart_toStartOf="@+id/tilRePassword"
        app:layout_constraintTop_toBottomOf="@+id/tilRePassword"
        app:main_text="다음" />
</androidx.constraintlayout.widget.ConstraintLayout>